<resources>
    <string name="app_name" translatable="false">MarvelAPP</string>
    <string name="generic_default_text" translatable="false">default placeholder text</string>
    <string name="validation_not_everything_filled_in">Please fill in all fields before saving</string>
    <string name="share">Share</string>
    <string name="no_shareable_app_installed">No app installed that can share this!</string>

    <!-- Navigation -->
    <string name="characters_nav_text">Characters</string>
    <string name="comics_nav_text">Comics</string>
    <string name="settings_nav_text">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sensors_nav_text">Sensors</string>
    <string name="extra_header">Extras</string>

    <!-- Preferences -->
    <string name="general_header">General</string>
    <string name="language_title">Language</string>
    <string name="account_nav_text">Account</string>

    <!-- Account -->
    <string name="update_account_details_button_text">Update details</string>
    <string name="select_account_profile_picture_button_text">Select image</string>
    <string name="account_profile_picture_header">Profile picture</string>
    <string name="manage_account_details_description">Manage your account details</string>
    <string name="open_camera_button_text">Open Camera</string>
    <string name="account_details_updated_notification_text">Your account details have been updated!</string>

    <!-- Sensors -->
    <string name="sensors_humidity_header">Humidity</string>
    <string name="sensors_pressure_header">Pressure</string>
    <string name="sensors_light_header">Light</string>
    <string name="sensors_ambient_temperature_header">Ambient Temperature</string>
    <string name="sensors_location_text">Location</string>
    <string name="sensors_latitude_header">Latitude</string>
    <string name="sensors_longitude_header">Longitude</string>
    <string name="sensors_fetch_location_button_text">Fetch Location</string>

    <!-- Input fields -->
    <string name="email_input_hint">Enter your email...</string>
    <string name="email_header">E-mailadress</string>
    <string name="name_input_hint">Enter your name...</string>
    <string name="name_header">Name</string>

    <!-- Character Details -->
    <string name="description_unavailable">Description unavailable</string>
    <string name="share_character_greeting">Hey there, look at this awesome new character I found</string>
    <string name="share_character_mention_description">And here a description:</string>
    <string name="share_character_look_at_him">You can take a look at him here:</string>

    <!-- Comic Details-->
    <string name="EAN" translatable="false">EAN</string>
    <string name="ISBN" translatable="false">ISBN</string>
    <string name="amount_of_pages">Amount of pages</string>
    <string name="share_comic_greeting">Hey there! Look at this awesome comic I found:</string>
    <string name="share_comic_mention_description">And this is what its about:</string>
    <string name="share_comic_look_at_it">You can take a look at it here:</string>
</resources>