<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AccountFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <!-- Header -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:text="@string/account_nav_text"/>

                <TextView
                    android:id="@+id/tvCharacterDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/manage_account_details_description"
                    android:textSize="14sp" />
            </LinearLayout>
            <!-- END header -->

            <!-- Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_header"/>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/name_input_hint"
                    android:autofillHints=""/>
            </LinearLayout>
            <!-- END name -->

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_header"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_input_hint"
                    android:autofillHints=""/>
            </LinearLayout>
            <!-- END email -->

            <!-- Image -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_profile_picture_header"
                        android:paddingBottom="16dp"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivProfilePicture"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:src="@drawable/groku"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/bSelectImage"
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="wrap_content"
                    android:text="@string/select_account_profile_picture_button_text"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>
            <!-- END image -->

            <!-- Save button -->
            <Button
                android:id="@+id/bUpdateDetails"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/update_account_details_button_text"/>
            <!-- END save button -->

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>