<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SensorsFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSensorsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/sensors_nav_text"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Ambient temperature -->
        <LinearLayout
            android:id="@+id/llAmbientTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvSensorsHeader">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/sensors_ambient_temperature_header" />

            <TextView
                android:id="@+id/tvAmbientTemperature"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:text="0ºC" />

        </LinearLayout>
        <!-- END Ambient temperature -->

        <!-- Light -->
        <LinearLayout
            android:id="@+id/llLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/llAmbientTemperature">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/sensors_light_header" />

            <TextView
                android:id="@+id/tvLight"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:text="0lx" />

        </LinearLayout>
        <!-- END Light -->

        <!-- Pressure -->
        <LinearLayout
            android:id="@+id/llPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/llLight">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/sensors_pressure_header" />

            <TextView
                android:id="@+id/tvPressure"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:text="0hPa" />

        </LinearLayout>
        <!-- END Pressure -->

        <!-- Relative humidity -->
        <LinearLayout
            android:id="@+id/llHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/llPressure">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/sensors_humidity_header" />

            <TextView
                android:id="@+id/tvRelativeHumidity"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:text="0%" />

        </LinearLayout>
        <!-- END Relative humidity -->

        <TextView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            app:layout_constraintTop_toBottomOf="@id/llHumidity"
            android:background="@color/background"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/tvGPSHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/sensors_location_text"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/divider"/>

        <!-- Longitude -->
        <LinearLayout
            android:id="@+id/llLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvGPSHeader">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/sensors_longitude_header" />

            <TextView
                android:id="@+id/tvLongitude"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:text="0" />

        </LinearLayout>
        <!-- END Longitude -->

        <!-- Latitude -->
        <LinearLayout
            android:id="@+id/llLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/llLongitude">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/sensors_latitude_header" />

            <TextView
                android:id="@+id/tvLatitude"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:text="0" />

        </LinearLayout>
        <!-- END Latitude -->

        <!-- Request location -->
        <Button
            android:id="@+id/bFetchLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensors_fetch_location_button_text"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/llLatitude" />
        <!-- END Request location -->


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>